<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_name_cat"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="500dp"
        android:contentDescription="@string/product_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/product_background" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="415dp"
        android:layout_height="440dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/product_background2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="415dp"
        android:layout_height="380dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/product_background3" />

    <TextView
        android:id="@+id/ready_set_grow"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ready_set_grow"
        android:textColor="@color/brown"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/shop_plants"
        android:textColor="@color/green"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_product_image"
        android:layout_width="285dp"
        android:layout_height="305dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/product_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ready_set_grow"
        app:srcCompat="@drawable/houseplant_bird_of_paradise" />

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:text="@string/product_name"
        android:textColor="@color/green"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_product_image" />

    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/price"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

    <TextView
        android:id="@+id/tv_product_description"
        android:layout_width="365dp"
        android:layout_height="110dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:isScrollContainer="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:text="@string/product_description"
        android:textColor="@color/green"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_price" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        app:backgroundTint="@color/green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_description" />

</androidx.constraintlayout.widget.ConstraintLayout>